--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,15 @@
-POLYGON_MUMBAI_RPC=
-POLYGON_MAINNET_RPC=
+# You can deploy to any EVM chain, such as Ethereum or Polygon
 
-# Wallet public key: 0x......
+# Add your favorite RPC endpoints here (say from Alchemy) for the chain you're deploying to.
+TESTNET_RPC=
+MAINNET_RPC=
+
+# Add your wallet's private key below. Make a note of your public address here so you remember!
+#
+# This is the private key for this public address: 0x......
 PRIVATE_KEY=
 
-# Your API key for PolygonScan. Obtain one at https://polygonscan.com/myapikey
+# Create and add your API key for your chain's "scan" site.
+# - If Polygon, create one here: https://polygonscan.com/myapikey
+# - If Ethereum, create one here: https://etherscan.io/myapikey
 ETHERSCAN_API_KEY=
