Add contract upgrade instructions

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,6 @@ PRIVATE_KEY=
 # - If Polygon, create one here: https://polygonscan.com/myapikey
 # - If Ethereum, create one here: https://etherscan.io/myapikey
 ETHERSCAN_API_KEY=
+
+# For upgradeable functionality. Update this once initial contract was deployed
+UPGRADEABLE_PROXY_ADDRESS=
