--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -12,5 +12,6 @@ jobs:
               with:
                   node-version: '16.x'
             - run: node --version
+            - run: cd contract
             - run: npm install
             - run: npm test
