--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -12,6 +12,7 @@ jobs:
               with:
                   node-version: '16.x'
             - run: node --version
-            - run: cd contract
             - run: npm install
+              working-directory: contract
             - run: npm test
+              working-directory: contract
