Create upgradeable ERC721 smart contract, unit tests, docs and deploy (#2)
* Create ERC721 smart contract, and unit tests.

* Generalize config names to represent any EVM chain

* Update docs with deploy and new console examples

* Add contract upgrade instructions

Closes #1.

--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -13,4 +13,6 @@ jobs:
                   node-version: '16.x'
             - run: node --version
             - run: npm install
+              working-directory: contract
             - run: npm test
+              working-directory: contract
