--- a/contract/package.json
+++ b/contract/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "hardhat test --network hardhat test/*.ts",
+        "test:gas": "REPORT_GAS=1 hardhat test --network hardhat test/*.ts",
         "deploy": "hardhat run --network localhost scripts/deploy.js",
         "console": "hardhat console --network localhost",
         "style": "prettier --write ."
@@ -26,6 +27,7 @@
         "dotenv": "^16.0.0",
         "ethers": "^5.5.2",
         "hardhat": "^2.8.0",
+        "hardhat-gas-reporter": "^1.0.9",
         "prettier": "^2.6.2",
         "prettier-plugin-solidity": "^1.0.0-beta.19",
         "solhint": "^3.3.6",
