--- a/contract/package.json
+++ b/contract/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "hardhat test --network hardhat test/*.ts",
         "test:gas": "REPORT_GAS=1 hardhat test --network hardhat test/*.ts",
+        "test:coverage": "hardhat coverage --network hardhat",
         "deploy": "hardhat run --network localhost scripts/deploy.js",
         "console": "hardhat console --network localhost",
         "style": "prettier --write ."
@@ -31,6 +32,7 @@
         "prettier": "^2.6.2",
         "prettier-plugin-solidity": "^1.0.0-beta.19",
         "solhint": "^3.3.6",
+        "solidity-coverage": "^0.8.2",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3"
     }
