--- a/contract/package.json
+++ b/contract/package.json
@@ -5,19 +5,20 @@
     "main": "index.js",
     "scripts": {
         "test": "hardhat test --network hardhat test/*.ts",
+        "test:gas": "REPORT_GAS=1 hardhat test --network hardhat test/*.ts",
+        "test:coverage": "hardhat coverage --network hardhat",
         "deploy": "hardhat run --network localhost scripts/deploy.js",
         "console": "hardhat console --network localhost",
         "style": "prettier --write ."
     },
     "engines": {
-        "npm": ">=8.5.5",
-        "node": ">=16.15.0"
+        "node": ">=16"
     },
     "keywords": [],
     "author": "Brian Gershon",
     "license": "MIT",
     "devDependencies": {
-        "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+        "@nomicfoundation/hardhat-toolbox": "^2.0.0",
         "@openzeppelin/contracts-upgradeable": "^4.6.0",
         "@openzeppelin/hardhat-upgrades": "^1.17.0",
         "@types/chai": "^4.3.3",
