Add hardhat watcher for running tests

--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -14,5 +14,5 @@ jobs:
             - run: node --version
             - run: npm install
               working-directory: contract
-            - run: npm test
+            - run: npm run test:ci
               working-directory: contract
