--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"dbaeumer.vscode-eslint",
-		"JuanBlanco.solidity",
+		"NomicFoundation.hardhat-solidity",
 		"esbenp.prettier-vscode"
 	],
 
